--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -87,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="210dp"
         android:height="48dp"
         android:background="@color/white"
         android:backgroundTint="#E3DB96"
@@ -246,7 +246,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="140dp"
         android:background="@drawable/normal_button_template"
         android:text="@string/enter"
         android:textColor="#FFFFFF"
@@ -269,6 +269,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tower_selection_background"
+        android:layout_width="208dp"
+        android:layout_height="52dp"
+        android:background="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/spinner"
+        app:layout_constraintStart_toStartOf="@+id/spinner"
+        app:layout_constraintTop_toTopOf="@+id/spinner" />
+
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="208dp"
@@ -276,6 +285,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:contentDescription="@string/tower_selection"
+        android:dropDownSelector="@color/black"
+        android:spinnerMode="dropdown"
         app:layout_constraintBottom_toTopOf="@+id/path2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tower_1"
